--- a/indeex.html
+++ b/indeex.html
@@ -83,6 +83,15 @@
         <input type="range" start="1">
 
 
+        <h1> clase nueva</h1>
+
+
+        CSS
+        puedo poner en un h1 por ejemplo un id 
+        <h1 id="titulo principal">HOLA</h1>
+        en el head poner : 
+        #titulo-principal{color:red;}
+
 
 
     </form>
