--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div>
         <p>SUV</p>
         <img src="mercedes.SUV.jpg" alt="hatchback clase A">
+        <img src="mercedes.suv2.0.jpg" alt="hatchback clase A"
+
     </div>
 
     <div>
