--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div>
         <p>Coupés</p>
-        <img src="mercedes.coupe.jpg" alt="hatchback clase A">
+        <img src="mercedes.coupe.jpg" width="10px" alt="hatchback clase A">
     </div>
 
     <div>
