--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <div>
         <p>SUV</p>
         <img src="mercedes.SUV.jpg" alt="hatchback clase A">
-        <img src="mercedes.suv2.0.jpg" alt="hatchback clase A"
+        <img src="mercedes.suv2.0.jpg" alt="hatchback clase A">
 
     </div>
 
     <div>
         <p>Coupés</p>
-        <img src="mercedes.coupe.jpg" width="10px" alt="hatchback clase A">
+        <img src="mercedes.coupe.jpg" width="10%" alt="hatchback clase A">
     </div>
 
     <div>
