--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Automoviles Mercedes Benz</title>
 </head>
 <body>      <!-- informacion para el usuario -->
+
+    <div style="text-align: center;"> 
+
     <h1>  <em> Mercedes-Benz </em>  </h1>
     <p> Encontra todos los modelos en nuestra pagina web</p>
 
@@ -39,6 +42,7 @@
         <img src="mercedes.cabrio.jpg" alt="hatchback clase A">
     </div>
     
+</div>
     
  
     <img src="./image/camara.jpg" alt="esta foto no existe">
