--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>      <!-- informacion para el usuario -->
 
-    <div style="text-align: center;"> 
+    <div>
 
-    <h1>  <em> Mercedes-Benz </em>  </h1>
+    <h1 style="text-align: center;"></h1>>  <em> Mercedes-Benz </em>  </h1>
     <p> Encontra todos los modelos en nuestra pagina web</p>
 
     <p>Podes encontrar:</p>
@@ -42,7 +42,7 @@
         <img src="mercedes.cabrio.jpg" alt="hatchback clase A">
     </div>
     
-</div>
+
     
  
     <img src="./image/camara.jpg" alt="esta foto no existe">
