--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automoviles Mercedes Benz</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>      <!-- informacion para el usuario -->
 
@@ -31,7 +32,7 @@
         <img src="mercedes.suv2.0.jpg" alt="hatchback clase A">
 
     </div>
-
+    <div class="probando">
     <div>
         <p>Coupés</p>
         <img src="mercedes.coupe.jpg" width="100px" height="200px" alt="hatchback clase A">
@@ -41,7 +42,7 @@
         <p>Cabrios/roadsters</p>
         <img src="mercedes.cabrio.jpg" alt="hatchback clase A">
     </div>
-    
+</div>
 
     
  
