--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="mercedes.sedan.jpg" alt="sedan">
     </div>
 
-    <div>
+    <div class="fotos">
         <p>SUV</p>
         <img src="mercedes.SUV.jpg" alt="hatchback clase A">
         <img src="mercedes.suv2.0.jpg" alt="hatchback clase A">
