--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <p> Encontra todos los modelos en nuestra pagina web</p>
 
     <p>Podes encontrar:</p>
-
+<div>
     <div>
         <p>hatchback</p>
         <img src="mercedes.hatchback.jpg" alt="hatchback clase A">
     </div>
     
-    <div>
+    <div class="col-izq">
         <p>Sedán</p>
         <img src="mercedes.sedan.jpg" alt="sedan">
     </div>
@@ -30,9 +30,9 @@
         <p>SUV</p>
         <img src="mercedes.SUV.jpg" alt="hatchback clase A">
         <img src="mercedes.suv2.0.jpg" alt="hatchback clase A">
-
     </div>
-    <div class="probando">
+    </div>
+    <div class="col-der">
     <div>
         <p>Coupés</p>
         <img src="mercedes.coupe.jpg" width="100px" height="200px" alt="hatchback clase A">
