--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     ¡Disfruta de nuestra gran variedad de platos!
 
     <p>Pastas - Carnes - Platos de Mar - Ensaladas <br>Ademas te deleitarás con nuestros increibles cocteles de autor </p>
-    
+
  <p>--------------------------------------------------------------------------------</p>
 </div>
 
@@ -194,8 +194,8 @@
           <li class="letra-carta">Orecchiette, con estofado de cerdo y vieyras frescas al curry</li>
           <br>
           <li class="letra-carta">20 piezas de sushi a eleccion</li>
-          <input type="button" id="a" value="Ver sushi" onclick="mostrarSushi()">
-            <div id="g" style="display: none;" > <b>Shashimi, Nigiri, Maki, Temaki</b></div>
+          <input type="button" id="a" value="Ver sushi" onclick="mostrarSushi()"> <br> <br>
+            <div id="g"  style="display: none;" ><i>Shashimi, Nigiri, Maki, Temaki</i></div>
      </ul>
 </div>
 </div>
@@ -291,7 +291,7 @@
     <h3> CONTACTANOS </h3> <br><br> 
       <p>  &#128222 +54 1210-9010<br> 
         &#128233 comandoyle@gmail.com <br>
-        <a href="#" ><img src="./580b57fcd9996e24bc43c521.png.crdownload" height="30px"></a> 
+        <a target="_blank" href="https://www.instagram.com/trade.skybar/" ><img src="./580b57fcd9996e24bc43c521.png.crdownload" height="30px"></a> 
     </p>
 
 </footer>
