--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
     <div class="logo">
-        <a href="#"> <img src="./580b57fcd9996e24bc43c543.png.crdownload"  width="40px"> </a>
+        <a  target="_blank" href="https://web.whatsapp.com/"> <img src="./580b57fcd9996e24bc43c543.png.crdownload"  width="40px"> </a>
     </div>
 
 
